rtg_tests/negative/missing_main/go.mod
module example.com/rtgtests/negative/missing_main

go 1.25
